--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
+    <div class=button-container>
+        <button class="button" type="button">Change Grid</button>
+    </div>     
     <div id="container" class="container">
         
     </div>
